--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>March 8 HTML CSS Static Web Page Design</title>
+    <title>Static web page</title>
     <style>
         #main {
             /*background-color: lightblue;*/
